cert-manager/myapp-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: myapp
  namespace: default
spec:
  # tls:
  # - secretName: myapp-tls-prod
  #   hosts:
  # #  - myapp.newtech.academy
  #   -  myapp.psamman.com
  rules:
   # - host: myapp.newtech.academy
    - host: myapp.psamman.com
      http:
        paths:
          - backend:
              serviceName: myapp
              servicePort: 3000
            path: /
